Colaboratory를 통해 생성됨

--- a/AppleCustom_YOLO.ipynb
+++ b/AppleCustom_YOLO.ipynb
@@ -6,7 +6,8 @@
       "name": "AppleCustom_YOLO.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMPjWCth/UbmIWgnMLFY92b",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyO8LEZLyfpr3+wxfDw1k1Pl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +16,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -91,6 +93,9 @@
         "!cp -r /content/Gdrive/MyDrive/Kobot/YOLO/darknet/weights .\n",
         "!cp -r /content/Gdrive/MyDrive/Kobot/YOLO/darknet/cfg .\n",
         "!cp -ar /content/Gdrive/MyDrive/Kobot/YOLO/darknet/data .\n",
+        "!cp -r /content/Gdrive/MyDrive/Kobot/YOLO/darknet/custom .\n",
+        "# Custom data가 있는 폴더 복사\n",
+        "!cp -r /content/Gdrive/MyDrive/Kobot/YOLO/darknet/backup .\n",
         "%ls"
       ],
       "metadata": {
@@ -133,6 +138,98 @@
       ],
       "metadata": {
         "id": "uJURZ1ItZy1Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Yolo Custom"
+      ],
+      "metadata": {
+        "id": "8byKcuJ8bG3w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cp -r \"/content/Gdrive/MyDrive/Kobot/YOLO/darknet/images\" ."
+      ],
+      "metadata": {
+        "id": "BwjIhl0cbIYF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!./darknet detector train images/custom_data.data images/apple-train-yolo.cfg weights/darknet53.conv.74 -dont_show "
+      ],
+      "metadata": {
+        "id": "OBr70rMNiMBg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!./darknet detector map images/custom_data.data images/apple-train-yolo.cfg backup/apple-train-yolo_final.weights"
+      ],
+      "metadata": {
+        "id": "_IECkbetHi8D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if os.path.exists('./backup'):\n",
+        "    !cp -r ./backup \"/content/Gdrive/MyDrive/Kobot/YOLO/darknet\"\n",
+        "\n",
+        "if not os.path.exists('./backup'):\n",
+        "    os.makedirs('./backup')\n",
+        "    !cp -r \"/content/Gdrive/MyDrive/Kobot/YOLO/darknet/backup/custom-train-yolo_final.weights\" ./backup"
+      ],
+      "metadata": {
+        "id": "B7LQFSkPO1wE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -al ./backup"
+      ],
+      "metadata": {
+        "id": "TBIW45xkT7Y4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!./darknet detector test images/custom_data.data images/apple-train-yolo.cfg backup/apple-train-yolo_final.weights data/damaged_apple.jpg -dont-show"
+      ],
+      "metadata": {
+        "id": "csj6_uIUX_Gd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "imShow('predictions.jpg')\n",
+        "download('predictions.jpg')"
+      ],
+      "metadata": {
+        "id": "yWv49L0idFA3"
       },
       "execution_count": null,
       "outputs": []
